# ElysiumLauncher

./: CMakeLists.txt  COPYING.md  README.md  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rfc.yml  suggestion.yml
.github/workflows/: build.yml  trigger_release.yml  winget.yml
cmake/: MacOSXBundleInfo.plist.in
flatpak/: elysiumlauncher  org.lunarie.ElysiumLauncher.yml
launcher/: Application.cpp  main.cpp
launcher/filelink/: FileLink.cpp
launcher/minecraft/auth/: AuthFlow.cpp  AuthFlow.h  MinecraftAccount.cpp
launcher/ui/dialogs/: AboutDialog.cpp  AuthlibInjectorLoginDialog.cpp  AuthlibInjectorLoginDialog.h  AuthlibInjectorLoginDialog.ui
launcher/ui/pages/global/: AccountListPage.cpp  AccountListPage.ui
launcher/ui/setupwizard/: JavaWizardPage.cpp  LoginWizardPage.cpp  LoginWizardPage.ui
launcher/updater/: PrismExternalUpdater.cpp
launcher/updater/prismupdater/: PrismUpdater.cpp
libraries/launcher/: CMakeLists.txt
nix/: README.md  unwrapped.nix  wrapper.nix
program_info/: CMakeLists.txt  elysiumlauncher.6.scd  elysiumlauncher.icns  elysiumlauncher.manifest.in  elysiumlauncher.qrc  elysiumlauncher.rc.in  genicons.elysium.sh  org.lunarie.ElysiumLauncher.desktop.in  org.lunarie.ElysiumLauncher.metainfo.xml.in
